--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description" : "Object Relational Mapping.",
     "main" : "./index.js",
     "dependencies" : {
+        "moment": ">=1.7.0",
         "connect": ">=2.8.0",
         "underscore": ">=1.3.3",
         "logger" : "https://github.com/SGF-Games/node-dev-logger.git"
@@ -14,8 +15,7 @@
         "mocha": ">=1.3.2",
         "should": ">=1.1.0"
     },
-    "scripts" : {
-    },
+    "scripts":{ "test" : "expresso"},
     "repository": {
         "type": "git",
         "url": "https://github.com/yxdh4620/orm_tooles"
